--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
                         </a>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="box">
+                        <a href="https://github.com/abhishek94056/SAMSTRACK_SpringBoot_API.git" target="_blank">
+                        <img src="Attendance.jpeg"  alt="">
+                        <div class="text">SamsTrack </div>
+                            <p>Is a Spring Boot REST API project designed to streamline the process of managing student attendance in educational institutions. It allows faculty members to record attendance for specific subjects and provides interfaces for viewing and managing these records. 
+                            <br><br><b>Technology</b> : Spring Boot, Hibernate, Angular, and MySQL.<br></p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
@@ -242,5 +252,6 @@ style="fill:#FA5252;">
 
     <script src="port.js"></script>
 </body>
+
 
 </html>
